# urs_scal

./: .gitignore  LICENSE  README.md  cmp_models.py  cnf_list  correlation.py  dataset_sizes.py  f1_scores_rf_100.py  fi.csv  fi.py  gen_rf_100.py  get_scores.py  hist.py  m.csv  models.csv  models.pkl  models.py  models_n.pkl  rf_100.pkl  rf_100_n.pkl
data/: 3sat.csv  3sat.deff.csv  3sat.eqv.csv  3sat.fpt.csv  deff.csv  eqv.csv  fpt.csv  mc.csv  mc_log.csv  minisat.csv  mis.csv  nb_clauses.csv  patoh_10.csv  patoh_9.csv  stat_bsat_2022-08-16.csv  stat_cms_2022-08-11.csv  stat_d4_2022-07-27.csv  stat_d4_2022-08-11.csv  stat_quicksampler_2022-07-25.csv  stat_sharpSAT_2022-07-27.csv  stat_sharpSAT_2022-08-11.csv  stat_spur_2022-07-25.csv  stat_spur_2022-08-11.csv  stat_unigen3_2022-08-04.csv  stat_unigen3_2022-08-12.csv  stat_unigen3_2022-08-16.csv  tw.csv  z3.csv
eqv/: Makefile  eqv.def
eqv/src/: CNF.cpp  CNF.hpp  UF.cpp  UF.hpp  Z3CNF.cpp  (+2 more)
eqv_pred/: README.md  cmp_models.py  correlation.py  fi.csv  fi.py  gen_rf_100.py  get_scores.py  m.csv  models.csv  models.pkl  models.py  models_f1.csv  models_n.pkl  models_roc.csv  rf_100.pkl
eqv_pred/cnf_to_graph/: CMakeLists.txt
eqv_pred/cnf_to_graph/src/: cnf.cpp  fpt.cpp  lp_deff.cpp  main.cpp  uf.cpp  uf.hpp
eqv_pred_arjun/: cmp_models.py  correlation.py  dataset_sizes.py  fi.csv  fi.py  gen_rf_100.py  hist.py  log  m.csv  models.py  models_n.pkl  recall.py  rf_100.pkl  t
scripts/: deff.sh
singularity/: d4.def  data.out  gmon.out  sharpSAT  sharpSAT.def  spur.def  unigen3.def
tw/: flow_cutter_pace17  tw.sh
(+64 files in other folders)
